--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.LessonArchitecturePatterns"
         tools:targetApi="31">
         <activity
+            android:name=".without.Activity"
+            android:exported="false" />
+        <activity
             android:name=".mvc.view.ViewActivity"
             android:exported="false" />
         <activity
